--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -9,6 +9,29 @@
 <div class="container body-content">
 
     <!-- // TODO #2 - display the job fields, one per row -->
+    <table class="job-listing" th:each="jobDetail : ${jobDetails}" >
+
+        <tr>
+            <th>Name</th>
+            <td th:text="${jobDetail.Name}"></td>
+        </tr>
+        <tr>
+            <th>Employer</th>
+            <td th:text="${jobDetail.Employer}"></td>
+        </tr>
+        <tr>
+            <th>Location</th>
+            <td th:text="${jobDetail.Location}"></td>
+        </tr>
+        <tr>
+            <th>Position Type</th>
+            <td th:text="${jobDetail.PositionType}"></td>
+        </tr>
+        <tr>
+            <th>Skill</th>
+            <td th:text="${jobDetail.CoreCompetency}"></td>
+        </tr>
+    </table>
 
 </div>
 
